--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -380,7 +380,7 @@
       }
 
       applause-button {
-        margin: 1em auto 2em;
+        margin: 1em auto 0;
       }
     }
   }
